OpenRewrite recipe best practices
Use this link to re-run the recipe: https://app.moderne.io/builder/abtSSjvHK?organizationId=QUxML01vZGVybmUgKyBPcGVuUmV3cml0ZQ%3D%3D

Co-authored-by: Moderne <team@moderne.io>